# HibiBoard

./: CMakeLists.txt  LICENSE  README.md  config.h  dutywindow.cpp  dutywindow.h  main.cpp  resources.qrc  resources.rc  settingswindow.cpp  settingswindow.h  topbarwindow.cpp  topbarwindow.h
